simplified descriptions of cards, and changed the wording on button links in cards

--- a/index.html
+++ b/index.html
@@ -30,37 +30,33 @@
                <img src="images/language.png" alt="Language" class="card-img">
                <h3>Language</h3>
                <p>
-                  Charles Darwin University (CDU) is an education provider as well as an employer. As a public institution, CDU is legally obliged to ensure that all staff and students can work in an environment that is free from harassment and discrimination.
-                  It is important for all members of the rtant for all members of the rtant for all members of the rtant for all members of the rtant for all members of the rtant for all members of the rtant for all members of the rtant for all members of the rtant for all members of the rtant for all members of the rtant for all members of the rtant for all members of the rtant for all members of the university community to recognise and value cultural diversity and understand the importance of using inclusive language as a way of creating an harmonious environment
+                  Learn about the importance of how to use inclusive language while at university.
                </p>
-               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Language</a>
+               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a>
             </div>
             <div class="card">
                <img src="images/formalwriting.png" alt="Formal Writing" class="card-img">
                <h3>Formal Writing</h3>
                <p>
-                  Charles Darwin University (CDU) is an education provider as well as an employer. As a public institution, CDU is legally obliged to ensure that all staff and students can work in an environment that is free from harassment and discrimination.
-                  It is important for all members of the university community to recognise and value cultural diversity and understand the importance of using inclusive language as a way of creating an harmonious environment
+                  Learn how to avoid the use of personal pronouns in formal writing and learn how to use precise and uncluttered language.
                </p>
-               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Formal Writing</a>
+               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a>
             </div>
             <div class="card">
                <img src="images/paraphrase.png" alt="Quoting, Paraphrasing & Summarising" class="card-img">
                <h3>Quoting, Paraphrasing &amp; Summarising</h3>
                <p>
-                  Charles Darwin University (CDU) is an education provider as well as an employer. As a public institution, CDU is legally obliged to ensure that all staff and students can work in an environment that is free from harassment and discrimination.
-                  It is important for all members of the university community to recognise and value cultural diversity and understand the importance of using inclusive language as a way of creating an harmonious environment
+                  Learn how to include the ideas of an expert in your text.
                </p>
-               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Quoting, Paraphrasing, Summarising</a>
+               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a>
             </div>
             <div class="card">
                <img src="images/punctuation.png" alt="Punctuation" class="card-img">
                <h3>Punctuation</h3>
                <p>
-                  Charles Darwin University (CDU) is an education provider as well as an employer. As a public institution, CDU is legally obliged to ensure that all staff and students can work in an environment that is free from harassment and discrimination.
-                  It is important for all members of the university community to recognise and value cultural diversity and understand the importance of using inclusive language as a way of creating an harmonious environment
+                  Learn how to use punctuation marks to organise your words into clauses and sentences.
                </p>
-               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Punctuation</a>
+               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a>
             </div>
          </section>
       </div>
