changed text alignment

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
          <h1>Academic Writing</h1>
       </div>
       <div class="content">
-         <section id="pageintro">
+         <section class="pageintro">
             <h2>Introduction to academic writing</h2>
             <p>In this section, we take you through some of the ways in which you can write using an academic style which is appropriate and grammatically correct.
                We provide you with information on what to expect and how to go about achieving a satisfactory academic style, including the use of inclusive language.
