changed description of formal language to fit content better

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                <img src="images/formalwriting.png" alt="Formal Writing" class="card-img">
                <h3>Formal Writing</h3>
                <p>
-                  Learn how to avoid the use of personal pronouns in formal writing and learn how to use precise and uncluttered language.
+                  Learn about all about what is appropriate and inappropriate when it comes to formal writing.
                </p>
                <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a>
             </div>
