--- a/Dev_Sprint1/index.html
+++ b/Dev_Sprint1/index.html
@@ -8,11 +8,16 @@
   </head>
   <body>
 
-<div class="search-box">
-  <input class="search-txt" type="text" name="" placeholder="Type to search">
-  <a class="search-btn" href="#"><i class="fas fa-search"></i>
-   </a>
+    <div class="header1">
+      <img src="allsp.gif" alt="">
+      <div class="search-box">
+        <input class="search-txt" type="text" name="" placeholder="Type to search">
+        <a class="search-btn" href="#"><i class="fas fa-search"></i>
+         </a>
+      </div>
+    </div>
 
-</div>
+    <h1 class="heading">Academic Writing</h1>
+
   </body>
 </html>
