--- a/Dev_Sprint1/index.html
+++ b/Dev_Sprint1/index.html
@@ -18,6 +18,30 @@
     </div>
 
     <h1 class="heading">Academic Writing</h1>
+    <h2 class="topic">Inclusive Language</h2>
 
+    <p>Charles Darwin University (CDU) is an education provider as well as an employer.
+      As a public institution, CDU is legally obliged to ensure that all staff and students can work in an environment that is free from harassment and discrimination.
+      It is important for all members of the university community to recognise and value cultural diversity and understand the importance of using inclusive language as a way of creating an harmonious environment.</p>
+
+      <h2 class="topic">What is inclusive language?</h2>
+
+    <p>Inclusive language is language that does not belittle, exclude, stereotype or trivialise people on the basis of their race, gender or disability.
+
+      At university there are a number of people from different cultural and linguistic backgrounds as well as people with disabilities, different sexual preferences and holding varied religious or spiritual belief systems.
+      We all have a responsibility to respect these differences and ensure that our speech and language is appropriate and non-discriminatory.
+      This means avoiding terms which are offensive or using language that portrays certain people in negative ways.</p>
+
+      <div class="container">
+        <label class="title1"> Language and Culture  <span> &#9660;</span></label>
+        <p class="contentBox">An Indigenous Australian is someone of Aboriginal or Torres Strait Islander descent, identifies as an Aboriginal or Torres Strait Islander and is accepted as an Aboriginal or Torres Strait Islander in the community in which he/she lives or has lived.
+
+          The term aboriginal, written with a small ‘a’ is used to describe indigenous people around the world and fails to recognise the uniqueness of Indigenous Australians.
+
+          The term Aboriginal, with a capital ‘A’, on the other hand denotes Indigenous Australians and is therefore a more appropriate word to use.
+
+          Indigenous Australians are not, however, a homogeneous group and prefer to be called by the language or cultural groups to which they belong.
+          For example, in the Northern Territory there are many different groups such as the Larrakia (Darwin), Tiwi people who live on Bathurst and Melville Islands, the Yolngu from Arnhem Land and the Warlpiri from areas north and west of Alice Springs.</p>
+      </div>
   </body>
 </html>
