--- a/Dev_Sprint1/index.html
+++ b/Dev_Sprint1/index.html
@@ -33,7 +33,8 @@
       This means avoiding terms which are offensive or using language that portrays certain people in negative ways.</p>
 
       <div class="container">
-        <label class="title1"> Language and Culture  <span> &#9660;</span></label>
+        <label for="title1" class="title"> Language and Culture  <span> &#9660;</span></label>
+        <input type="checkbox" id="title1">
         <p class="contentBox">An Indigenous Australian is someone of Aboriginal or Torres Strait Islander descent, identifies as an Aboriginal or Torres Strait Islander and is accepted as an Aboriginal or Torres Strait Islander in the community in which he/she lives or has lived.
 
           The term aboriginal, written with a small ‘a’ is used to describe indigenous people around the world and fails to recognise the uniqueness of Indigenous Australians.
@@ -42,6 +43,33 @@
 
           Indigenous Australians are not, however, a homogeneous group and prefer to be called by the language or cultural groups to which they belong.
           For example, in the Northern Territory there are many different groups such as the Larrakia (Darwin), Tiwi people who live on Bathurst and Melville Islands, the Yolngu from Arnhem Land and the Warlpiri from areas north and west of Alice Springs.</p>
+      </div>
+
+      <div class="container">
+        <label for="title2" class="title"> Language and Australians of labguage backgrounds other than English<span> &#9660;</span></label>
+        <input type="checkbox" id="title2">
+        <p class="contentBox">It is important too to avoid ethnic or racist labels which create negative stereotypes.
+          Any person, who was born in Australia or has acquired Australian citizenship regardless of their cultural background or origins, should be referred to as Australian.
+
+          Terms such as ‘wog’ or ‘dago’ or ‘chink’ should be avoided as they demean and belittle people and are seen as a form of racial harassment.</p>
+      </div>
+
+      <div class="container">
+        <label for="title3" class="title"> Language and Sexulaity/Gender<span> &#9660;</span></label>
+        <input type="checkbox" id="title3">
+        <p class="contentBox">Language that humiliates or intends harm to people on the basis of their assumed or actual sexual preference is not acceptable and can be offensive.
+
+          Derogatory comments about gays, lesbian, bisexual members of the public are heard all too often.
+          Unless members of these groups have used specific terms to reclaim their identity and as a means of empowerment, it is not generally acceptable to use terms such as 'dyke' or 'queer', 'poofter', and so on.</p>
+      </div>
+
+      <div class="container">
+        <label for="title4" class="title"> Language and Disabilities<span> &#9660;</span></label>
+        <input type="checkbox" id="title4">
+        <p class="contentBox">Language that humiliates or intends harm to people on the basis of their assumed or actual sexual preference is not acceptable and can be offensive.
+
+          Derogatory comments about gays, lesbian, bisexual members of the public are heard all too often.
+          Unless members of these groups have used specific terms to reclaim their identity and as a means of empowerment, it is not generally acceptable to use terms such as 'dyke' or 'queer', 'poofter', and so on.</p>
       </div>
   </body>
 </html>
