--- a/Dev_Sprint1/index.html
+++ b/Dev_Sprint1/index.html
@@ -20,13 +20,13 @@
     <h1 class="heading">Academic Writing</h1>
     <h2 class="topic">Inclusive Language</h2>
 
-    <p>Charles Darwin University (CDU) is an education provider as well as an employer.
+    <p class="content">Charles Darwin University (CDU) is an education provider as well as an employer.
       As a public institution, CDU is legally obliged to ensure that all staff and students can work in an environment that is free from harassment and discrimination.
       It is important for all members of the university community to recognise and value cultural diversity and understand the importance of using inclusive language as a way of creating an harmonious environment.</p>
 
       <h2 class="topic">What is inclusive language?</h2>
 
-    <p>Inclusive language is language that does not belittle, exclude, stereotype or trivialise people on the basis of their race, gender or disability.
+    <p class="content">Inclusive language is language that does not belittle, exclude, stereotype or trivialise people on the basis of their race, gender or disability.
 
       At university there are a number of people from different cultural and linguistic backgrounds as well as people with disabilities, different sexual preferences and holding varied religious or spiritual belief systems.
       We all have a responsibility to respect these differences and ensure that our speech and language is appropriate and non-discriminatory.
@@ -43,6 +43,28 @@
 
           Indigenous Australians are not, however, a homogeneous group and prefer to be called by the language or cultural groups to which they belong.
           For example, in the Northern Territory there are many different groups such as the Larrakia (Darwin), Tiwi people who live on Bathurst and Melville Islands, the Yolngu from Arnhem Land and the Warlpiri from areas north and west of Alice Springs.</p>
+
+          <table class="contentBoxTable">
+            <tr>
+              <th>Appropriate</th>
+              <th>Inappropriate</th>
+            </tr>
+
+            <tr>
+              <td>Indgenous Australian People</td>
+              <td>aborigines</td>
+            </tr>
+
+            <tr>
+              <td>Aboriginal People</td>
+              <td>Black or blackfellas</td>
+            </tr>
+
+            <tr>
+              <td></td>
+              <td>Half caste, quarter caste, full blood</td>
+            </tr>
+          </table>
       </div>
 
       <div class="container">
