--- a/DevSprint1/index.html
+++ b/DevSprint1/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <script src="https://use.fontawesome.com/0e4cdb21eb.js"></script>
+    <!-- <script src="https://use.fontawesome.com/0e4cdb21eb.js"></script> -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <title></title>
   </head>
   <body>
