--- a/DevSprint1/index.html
+++ b/DevSprint1/index.html
@@ -93,6 +93,7 @@
           </table>
 
         <h3 class="subtopic">Language and Gender</h3>
+        <img src="flexible-gender-identity.png" style="float:right" alt="">
         <p class="content">Historically language usage has privileged men and often rendered women invisible or inferior.
 
           Here are some examples of appropriate and inappropriate language usage.</p>
