--- a/DevSprint1/index.html
+++ b/DevSprint1/index.html
@@ -18,7 +18,6 @@
 
     <h1 class="heading">Academic Writing</h1>
     <h2 class="topic">Inclusive Language</h2>
-      <iframe style="float:right" width="500" height="290" src="https://www.youtube.com/embed/ewaXfMeSM0w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"  allowfullscreen></iframe>
 
     <p class="content">Charles Darwin University (CDU) is an education provider as well as an employer.
       As a public institution, CDU is legally obliged to ensure that all staff and students can work in an environment that is free from harassment and discrimination.
@@ -28,6 +27,7 @@
 
 
     <p class="content">Inclusive language is language that does not belittle, exclude, stereotype or trivialise people on the basis of their race, gender or disability.</p>
+    <iframe width="500" height="290" src="https://www.youtube.com/embed/ewaXfMeSM0w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"  allowfullscreen></iframe>
     <p class="content">At university there are a number of people from different cultural and linguistic backgrounds as well as people with disabilities, different sexual preferences and holding varied religious or spiritual belief systems.
     We all have a responsibility to respect these differences and ensure that our speech and language is appropriate and non-discriminatory.
     This means avoiding terms which are offensive or using language that portrays certain people in negative ways.</p>
@@ -93,7 +93,6 @@
           </table>
 
         <h3 class="subtopic">Language and Gender</h3>
-        <img src="flexible-gender-identity.png" style="float:right" alt="">
         <p class="content">Historically language usage has privileged men and often rendered women invisible or inferior.
 
           Here are some examples of appropriate and inappropriate language usage.</p>
@@ -119,6 +118,7 @@
               <td>Authoress, actress, manageress</td>
             </tr>
           </table>
+            <img src="flexible-gender-identity.png" alt="">
 
         <h3 class="subtopic">Language and Disability</h3>
         <p class="content">It is important that people with a disability feel that they are part of university life and are not excluded through the inappropriate use of language.
