Changed file names Moved files to correct directories Changed source paths for css files
Edited landing page buttons to match team style guide
Removed CSS for a:visited, a:hover

--- a/inclusive_language.html
+++ b/inclusive_language.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/content.css">
     <!-- <script src="https://use.fontawesome.com/0e4cdb21eb.js"></script> -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <title></title>
   </head>
   <body>
     <div class="header1">
-      <img src="allsp.gif" alt="">
+      <img src="images/allsp.gif" alt="">
       <div class="search-box">
           <input class="search-txt"type="text"  placeholder="Type to search">
           <a class="search-btn" href="#"><i class="fas fa-search"></i></a>
@@ -118,7 +118,7 @@
               <td>Authoress, actress, manageress</td>
             </tr>
           </table>
-            <img src="flexible-gender-identity.png" alt="">
+            <img src="images/flexible-gender-identity.png" alt="">
 
         <h3 class="subtopic">Language and Disability</h3>
         <p class="content">It is important that people with a disability feel that they are part of university life and are not excluded through the inappropriate use of language.
