--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Study Skills website">
       <title>Academic Writing</title>
-      <link rel="stylesheet" href="styles.css" media="all">
+      <link rel="stylesheet" href="styles/main.css" media="all">
    </head>
    <body>
-      <div class="pageheading">
-         <h1>Academic Writing</h1>
-      </div>
+      <h1 class="pageheading">Academic Writing</h1>
       <div class="content">
          <section class="pageintro">
             <h2>Introduction to academic writing</h2>
@@ -28,11 +26,13 @@
          <section class="cards">
             <div class="card">
                <img src="images/language.png" alt="Language" class="card-img">
-               <h3>Language</h3>
+               <h3>Inclusive Language</h3>
                <p>
                   Learn about the importance of how to use inclusive language while at university.
                </p>
-               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a>
+               <!-- <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a> -->
+               <button class="button1"><a href="inclusive_language.html">Read More</a></button>
+               
             </div>
             <div class="card">
                <img src="images/formalwriting.png" alt="Formal Writing" class="card-img">
@@ -40,7 +40,8 @@
                <p>
                   Learn about all about what is appropriate and inappropriate when it comes to formal writing.
                </p>
-               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a>
+               <!-- <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a> -->
+               <button class="button1"><a href="inclusive_language.html">Read More</a></button>
             </div>
             <div class="card">
                <img src="images/paraphrase.png" alt="Quoting, Paraphrasing & Summarising" class="card-img">
@@ -48,7 +49,8 @@
                <p>
                   Learn how to include the ideas of an expert in your text.
                </p>
-               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a>
+               <!-- <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a> -->
+               <button class="button1"><a href="inclusive_language.html">Read More</a></button>
             </div>
             <div class="card">
                <img src="images/punctuation.png" alt="Punctuation" class="card-img">
@@ -56,7 +58,8 @@
                <p>
                   Learn how to use punctuation marks to organise your words into clauses and sentences.
                </p>
-               <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a>
+               <!-- <a href="http://learnline.cdu.edu.au/studyskills/studyskills/inclusivelanguage.html" class="button">Read More</a> -->
+               <button class="button1"><a href="inclusive_language.html">Read More</a></button>
             </div>
          </section>
       </div>
