--- a/inclusive_language.html
+++ b/inclusive_language.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/content.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <!-- <script src="https://use.fontawesome.com/0e4cdb21eb.js"></script> -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <title></title>
   </head>
   <body>
+    <button id="back-to-top-btn"><i class="fas fa-angle-double-up"></i></button>
+    <div class="body-container">
     <div class="header1">
       <img src="images/allsp.gif" alt="">
       <div class="search-box">
@@ -153,6 +156,7 @@
           </table>
 
           <p class="content">In summary, it is important to remember that inclusive language is required at university and students are encouraged to use appropriate terms and language in all their written and oral communications.</p>
-
+    </div>
+  <script src="main.js"></script>
   </body>
 </html>
