Content page updated

--- a/inclusive_language.html
+++ b/inclusive_language.html
@@ -18,9 +18,188 @@
           <a class="search-btn" href="#"><i class="fas fa-search"></i></a>
       </div>
     </div>
+    <main class="content">
+			<section id="formal-writing">
+        <h1 class="heading">Academic Writing</h1>
+				<h2>Formal Writing</h2>
+				<p>In this section, <em><strong>NEEDS INTRO, HELP!</strong></em></p>
+			</section>
+			<section id="formal">
+				<h3>Making your writing sound formal</h3>
+        <p>It is usually the case that in formal writing you avoid the use of personal pronouns.  These include <em>I, me, we, us and you</em>.
+           However there are instances in certain disciplines where your lecturer will invite you to use the first person.
+          In reflective journal writing for example, using the first person is appropriate.</p>
+			</section>
+			<section id="ppronouns">
+				<h4>Where to avoid using personal pronouns</h4>
+        <ol type="a">
+          <strong><li> When you are reporting what you did</li></strong>
+          <p><em><strong>Instead of writing:</strong></em></p>
+          <p>I prepared all the laboratory equipment for the whole group. </p>
+          <p><em><strong>Write:</strong></em></p>
+          <p>The laboratory equipment for the chemistry experiment was prepared.</p>
+          <p><em><strong>Instead of writing:</strong></em></p>
+          <p>I presented the group’s findings to the class. </p>
+          <p><em><strong>Write:</strong></em></p>
+          <p><em>The group’s findings were presented to the class.</em></p>
 
-    <h1 class="heading">Academic Writing</h1>
-    <h2 class="topic">Inclusive Language</h2>
+          <strong><li>When you are referring to what you have said,</li></strong>
+          <p><em><strong>Instead of writing:</strong></em></p>
+          <p>As I have already mentioned, Save the Children are leading the policy discussions on the establishment of Early Childhood Centres.</p>
+          <p><em><strong>Write:</strong></em></p>
+          <p>As previously mentioned, Save the Children are leading the policy discussions on the establishment of Early Childhood Centres.</p>
+          <p>In each of these examples, we used the passive voice to make sure that the language sounds impersonal.</p>
+
+          <strong><li>When you want to signal that you are drawing a conclusion,</li></strong><p>use an impersonal form such as: It can be seen that...</p>
+          <p><em><strong>Instead of writing:</strong></em></p>
+          <p>When using this teaching methodology with children from non-literate homes, <u><em>you can easily see</em></u> why it will never be successful.</p>
+          <p><em><strong>Write:</strong></em></p>
+          <p>When using this teaching methodology with children from non-literate homes, <u><em>it can easily be seen</em></u> why it will never be successful.</p>
+
+          <strong><li>When you want to use evidence to arrive at a conclusion you can also use similar language. For example:</li></strong>
+          <p><em><strong>Instead of writing:</strong></em></p>
+          <p>We can see, after examining the students’ results, that children are much more likely to be successful in their first two years of school if they have benefitted from preschool activities that promote cognitive growth.</p>
+          <p><em><strong>Write:</strong></em></p>
+          <p>The students’ results show that children are much more likely to be successful in their first two years of school if they have benefitted from preschool activities that promote cognitive growth.</p>
+
+        </ol>
+			</section>
+			<section id="judgements">
+				<h4>Making judgements: evaluations and opinions</h4>
+				<p>You are often asked to present a point of view in your writing, but it is important that you do this in an appropriate way.</p>
+        <p>The words in the table below help to grade the strength of your opinion. That is, they fill in the space between ‘yes’ or ‘absolutely’ or ‘no’ ‘not at all’. They are words which cover the ‘shades of grey’.</p>
+
+        <table>
+          <tr>
+            <th>Strong</th>
+            <th>Moderate</th>
+            <th>Weak</th>
+          </tr>
+
+          <tr>
+            <td>Must</td>
+            <td>Will</td>
+            <td>May</td>
+          </tr>
+
+          <tr>
+            <td>Certainly</td>
+            <td>Probably</td>
+            <td>Might</td>
+          </tr>
+
+          <tr>
+            <td>Undoubtely</td>
+            <td>Likely/Unlikely</td>
+            <td>Could or Possible</td>
+          </tr>
+        </table>
+
+        <p>You can also use the different phrases given below to show the strength of what you are saying your language by using expressions like:</p>
+
+        <table>
+          <tr>
+            <th>Strong</th>
+            <th>Moderate</th>
+            <th>Weak</th>
+          </tr>
+
+          <tr>
+            <td>It is certain that</td>
+            <td>It is likely/unlikely</td>
+            <td>It seems possible</td>
+          </tr>
+
+          <tr>
+            <td>It seems clear</td>
+            <td>It seems probably</td>
+            <td>It appears possible</td>
+          </tr>
+
+          <tr>
+            <td>It appears obvious</td>
+            <td>It appears probably/likely</td>
+            <td>It is possible</td>
+          </tr>
+        </table>
+
+        <p>For Example</p>
+        <table>
+          <tr>
+            <td><p>t is unlikely that government funding for university research will increase over the next five years.</p>
+            <p>It seems clear that that the number of online courses will increase.</p>
+            </td>
+          </tr>
+        </table>
+			</section>
+			<section id="avoid">
+				<h3>What to avoid in formal writing</h3>
+				<p>When writing an essay, it is important to construct a reasoned argument that is supported by carefully researched evidence. </p>
+        <p>The language that you use needs to be precise and uncluttered by unnecessary devices which have the potential to distract the reader, shift the meaning or detract from the clarity of the argument.</p>
+			</section>
+			<section id="cliches">
+				<h4>Cliches</h4>
+				<p>A cliché is an expression that has been overused.</p>
+        <p><strong>Example</strong></p>
+        <table>
+          <tr>
+            <td><ul>
+              <li>We cannot build a new school <strong>at this point in time.</strong></li>
+              <li>Who would have thought that slavery could exist in <strong>this day and age?</strong></li>
+              <li>The Prime Minister believed that <strong>at the end of the day</strong> her policies would be vindicated.</li>
+            </ul></td>
+          </tr>
+        </table>
+			</section>
+			<section id="fspeech">
+				<h4>Figures of speech</h4>
+				<p>Figures of speech are closely related to clichés. Like metaphors and similes, figures of speech provide a writer with a colourful or forceful means to draw attention to a particular point but should be avoided in academic writing.</p>
+        <table>
+          <tr>
+            <td><ul>
+              <li>The cleaners were advised <strong>to lift their game</strong> or else.</li>
+              <li>Management has been <strong>on a steep learning curve.</strong></li>
+              <li>It would be like looking for a <strong>needle in a haystack.</strong></li>
+            </ul></td>
+          </tr>
+        </table>
+			</section>
+			<section id="informal">
+				<h4>Informal language</h4>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
+			</section>
+			<section id="padding">
+				<h4>Padding</h4>
+				<p>Padding consists of all the extra words added to writing that do not add anything to the meaning or content of the text. This includes:</p>
+        <ul>
+          <li>Redundant phrases such as 'It is interesting/worthy/important to note that ...’ 'For what it's worth ...’.</li>
+          <li>Irrelevant material which has no bearing on your topic.</li>
+          <li>'Dead' words includes words which repeat other words e.g. dead corpse, combined together.</li>
+          <li>Adverbs add quantity but little to the meaning. Adverbs such as: really, rather, quite, totally and so on, may not enhance your expression. For example: really obscure, rather tedious.</li>
+        </ul>
+			</section>
+			<section id="complex">
+				<h4>Complex writing</h4>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis, blanditiis expedita? Earum eligendi pariatur quaerat quos expedita ab quibusdam ratione veniam in, mollitia fuga repudiandae?</p>
+			</section>
+			<section id="texting">
+				<h4>Texting language</h4>
+				<p>Texting language is the collective term used for the shorthand way that people talk to each other using text messages, email, instant messaging and other forms of written contact.
+          Abbreviating words is common in text language as the examples below show.</p>
+        <ul>
+          <li>asap - As soon as possible</li>
+          <li>atm - At the moment</li>
+          <li>b4 - Before</li>
+          <li>brb - Be right back</li>
+          <li>btw - By the way</li>
+        </ul>
+
+        <p>These example and others are used in informal texting exchanges. It is important to remember that text language is <strong>not acceptable </strong>in formal writing such as essays, exams, reports etcetera.</p>
+			</section>
+		</main>
+		<footer class="footer">
+
+    <h2 class="topic">Formal</h2>
 
     <p class="content">Charles Darwin University (CDU) is an education provider as well as an employer.
       As a public institution, CDU is legally obliged to ensure that all staff and students can work in an environment that is free from harassment and discrimination.
